Fix line wrap on progress
Introduced by changing font

--- a/components/Game/Game.module.css
+++ b/components/Game/Game.module.css
@@ -12,7 +12,7 @@
     max-width: 768px;
 }
 .headerProgress {
-    width: 120px;
+    width: 145px;
 }
 .header button {
     aspect-ratio: 1;
